// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render a button with an id 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary" id="identifier">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type button 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="button">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type reset 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="reset">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type submit 1`] = `
<mg-button aria-label="label" role="button" tabindex="0" type="submit">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--danger">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--danger mg-button--icon">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--danger-alt">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--danger-alt mg-button--icon">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--flat">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--flat mg-button--icon">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--info">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--icon mg-button--info">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--icon mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--secondary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--icon mg-button--secondary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon false 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--success">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon true 1`] = `
<mg-button aria-label="label" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--icon mg-button--success">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary" id="identifier">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 2`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary" id="identifier">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 3`] = `
<mg-button aria-disabled="true" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button mg-button--disabled mg-button--primary" id="identifier">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 1`] = `
<mg-button role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 2`] = `
<mg-button aria-disabled="true" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button mg-button--disabled mg-button--loading mg-button--primary">
      <mg-icon icon="loader" spin=""></mg-icon>
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 3`] = `
<mg-button aria-disabled="false" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not have fn when disabled 1`] = `
<mg-button aria-disabled="true" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button mg-button--disabled mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not trigger disableOnClick when disabled 1`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button mg-button--disabled mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not trigger disableOnClick when disabled 2`] = `
<mg-button aria-disabled="true" disableonclick="" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button mg-button--disabled mg-button--primary">
      <div class="mg-button__content">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;
